# libre

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
scripts/: install.sh
src/: args.rs  hashlist.rs  lib.rs  main.rs
