[package]
name = "libre-cli"
version = "0.1.0"
edition = "2021"
description = "Command line tool for the Solana Libreplex project"
repository = "https://github.com/samuelvanderwaal/libre"
license = "Apache-2.0"

[[bin]]
name = "libre"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
borsh = { version = "0.9.3" }
clap = { version = "4.4.10", features = ["derive"] }
dirs = "5.0.1"
indexmap = { version = "2.1.0", features = ["serde"] }
serde = "1.0.193"
serde_json = "1.0.108"
serde_with = "3.4.0"
serde_yaml = "0.9.27"
solana-client = "1.17.6"
solana-logger = "1.17.6"
solana-program = "1.17.6"
solana-sdk = "1.17.6"
